<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="create_acc"/>
    <string name="call_operator"/>
    <string name="app_name">Moto.dtp.info</string>
	<string name="status_top_address">адрес</string>
	<string name="accidents_details_address">Адрес</string>
	<string name="accidents_details_owner">Сообщил</string>
	<string name="accidents_details_status">Статус</string>
	<string name="accidents_details_begin">Начало</string>
	<string name="settings_distance">Показывать не далее (км)</string>
	<string name="settings_distance_alarm">Оповещать звуком не далее (км)</string>
	<string name="settings_accidents">ДТП</string>
	<string name="settings_confirm_button">Сохранить</string>
	<string name="settings_cancel_button">Отменить</string>
	<string name="settings_breaks">Поломки</string>
	<string name="small_menu_refresh">Обновить</string>
	<string name="small_menu_settings">Настройки</string>
	<string name="small_menu_exit">Выйти</string>
	<string name="settings_auth_button">Авторизация</string>
	<string name="activity_auth_header">Для авторизации необходимо ввести логин и пароль такие же как и для захода на <a href="http://motodtp.info/">motodtp.info</a>. <a href="http://forum.moto.msk.ru/index.php?app=core&amp;module=global&amp;section=register">Регистрация</a>.</string>
	<string name="activity_auth_login">Логин</string>
	<string name="activity_auth_password">Пароль</string>
	<string name="auth_confirm_button">ОК</string>
	<string name="auth_cancel_button">Отмена</string>
	<string name="activity_auth_anonim_label">Анонимно</string>
	<string name="activity_create_back_button">Назад</string>
	<string name="create_forward_button">Дальше</string>
	<string name="activity_create_select_type_header">Что произошло?</string>
	<string name="activity_create_type_acc_button">ДТП</string>
	<string name="activity_create_type_break_button">Поломка</string>
	<string name="activity_create_type_steal_button">Угон</string>
	<string name="activity_create_type_other_button">Прочее</string>
	<string name="activity_create_acc_solo_button">Один участник</string>
	<string name="activity_create_acc_ma_button">Мот/авто</string>
	<string name="activity_create_acc_mm_button">Мот/мот</string>
	<string name="activity_create_acc_mp_button">Наезд на пешехода</string>
	<string name="activity_create_people_ok_button">Без травм</string>
	<string name="activity_create_people_light_button">Ушибы</string>
	<string name="activity_create_people_hard_button">Серьезные травмы</string>
	<string name="activity_create_people_death_button">Летальный исход</string>
	<string name="activity_create_confirm_button">Готово</string>
	<string name="activity_auth_cancel_label">Отмена</string>
	<string name="clipart_popup_copy">Копировать</string>
	<string name="clipart_popup_cancel">Отмена</string>
	<string name="activity_create_people_na_button">Неизвестно</string>
	<string name="what">Что</string>
	<string name="where">Где</string>
	<string name="when">Когда</string>
	<string name="reported">Сообщил</string>
	<string name="activity_create_people_header">Что с людьми?</string>
	<string name="details">Краткое описание</string>
	<string name="accListYesterdayLine">Вчера</string>
	<string name="settings_steal">Угоны</string>
	<string name="settings_other">Прочее</string>
	<string name="copy">Копировать</string>
	<string name="finish">Отбой</string>
	<string name="error">Ошибка</string>
	<string name="unfinish">Отменить отбой</string>
	<string name="show">Показать</string>
	<string name="hide">Скрыть</string>
	<string name="notif_system">default system</string>
	<string name="notification_sound">Выбрать звук уведомления</string>
	<string name="tab_accidents">События</string>
	<string name="tab_map">Карта</string>
	<string name="activity_main_add_point_button">Создать событие</string>
	<string name="dial_button">Звонок оператору</string>
	<string name="statusBarButton">Настройки</string>
	<string name="inplace_delimiter">На месте</string>
	<string name="onway_delimiter">В пути</string>
	<string name="onway_button">Еду!</string>
	<string name="fine_address">Уточнить адрес</string>
    <string name="small_menu_settings2">Настройки2</string>
    <string name="title_activity_about">О приложении</string>
    <string name="config_title_notify_category">Настройки событий</string>
    <string name="config_acc_type_category">Типы инцидентов</string>
    <string name="small_menu_about">О приложении</string>
    <string name="about_info">Мото ДТП инфо - программа взаимопомощи на дорогах</string>
    <string name="about_authors">Авторы: rjhdby, Азимут.</string>
    <string name="config_other_category">Другое</string>
    <string name="activity_auth_logout_label">Завершить сеанс</string>
    <string name="activity_auth_login_label">Войти</string>
    <string name="title_activity_select_sound">SelectSoundActivity</string>
    <string name="map_provider_category">Карта</string>
    <string name="config_map_title">Провайдер</string>
    <string name="inet_not_available">Не могу отправить запрос, пожалуйста, проверьте доступность Internet.</string>
	<string name="auth_not_available">Авторизация не возможна, пожалуйста, проверьте доступность Internet.</string>
    <string name="title_activity_create_acc">CreateAccActivity</string>
    <string name="send_success">Сообщение было успешно отправлено.</string>
    <string name="send_error">Произошла ошибка при отправке сообщения.</string>
    <string name="message_send_error">Произошла ошибка при отправке сообщения.</string>
    <string name="request_create_acc">Создание инцидента.</string>
    <string name="request_send_message">Отправка сообщения.</string>
    <string name="request_get_incidents">Получение инцидентов.</string>
    <string name="request_google_gcm">Регистрация GoogleCloudMessaging.</string>
    <string name="request_onway">Отправка \'выехал\'.</string>
    <string name="request_geocode">Геокодирование.</string>
    <string name="settings_summary_off">Скрыты</string>
    <string name="settings_summary_on">Показаны</string>
    <string name="to_map">На карту</string>
    <string name="tab_onway">Едут/на месте</string>
    <string name="tab_messages">Сообщения</string>
    <string name="tab_log">История</string>
    <string name="share">Поделиться</string>
    <string name="unknown_code_version">Не определено</string>
    <string name="code_version_prefix">Текущая версия</string>
    <string name="do_not_disturb">Не беспокоить</string>
    <string name="no_one_accident_visible">Никакие события показаны не будут</string>
    <string name="cant_open_incident">Не могу открыть инцидент.</string>
    <string name="position_not_available">Местоположение определить не удалось.</string>
    <string name="hide_info_details">Скрыть подробности</string>
    <string name="show_info_details">Показать подробности</string>
    <string name="parse_error">Ошибка разбора ответа сервера.</string>
    <string name="not_have_rights_error">Нет прав на эту операцию.</string>
    <string name="too_often_acts">Это действите нельзя выполнять так часто.</string>
    <string name="send_sms">Отправить СМС: </string>
    <string name="make_call">Позвонить: </string>
    <string name="about_url_support"><a href="http://forum.moto.msk.ru/forum/38-%D0%BC%D0%BE%D0%B1%D0%B8%D0%BB%D1%8C%D0%BD%D0%BE%D0%B5-%D0%BF%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5/">Поддержка</a>.</string>
	<string name="title_dialog_onway_confirm">Вы готовы выехать?</string>
    <string name="current_version_text">Текущая версия:</string>
	<string name="title_dialog_acc_not_actual">Этот инцидент уже не актуален.</string>
	<string name="auth_role">Вы: %1$s.</string>
	<string name="role_admin">администратор</string>
	<string name="role_moderator">модератор</string>
	<string name="role_user">пользователь</string>
	<string name="role_read_only">только чтение</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="auth_error">Ошибка авторизации</string>
	<string name="auth_password_error">Не удалось авторизоваться. Возможно неверно введен логин или пароль.</string>
	<string name="title_dialog_cancel_onway_confirm">Вы хотите отменить выезд?</string>
	<string name="onway_cancel_button">Отмена выезда</string>
    <string name="role_developer">Разработчик</string>
	<string name="settings_hours_ago">Показывать не старше (ч)</string>
	<string name="settings_max_notifications">Сообщений в области уведомлений</string>
	<string name="settings_use_vibration">Использовать вибрацию</string>
	<string name="settings_no_use_vibration">Не использовать вибрацию</string>
    <string name="title_activity_business_card">BusinessCardActivity</string>
	<string name="business_card">Визитка</string>
</resources>
