<menu xmlns:yourapp="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_map"
        android:title="@string/tab_map"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_hide_info"
        android:title="@string/hide_info_details"/>

    <item
        android:id="@+id/menu_acc_finish"
        android:visible="false"
        android:title="@string/finish"/>

    <item
        android:id="@+id/menu_acc_hide"
        android:visible="false"
        android:title="@string/hide"/>

    <item
        android:id="@+id/action_hide_info"
        android:icon="@drawable/ic_panel_up"
        yourapp:showAsAction="ifRoom"
        android:title="@string/hide_info_details"/>

    <item
        android:id="@+id/action_to_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        yourapp:showAsAction="ifRoom"
        android:title="@string/tab_map"/>

    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        yourapp:showAsAction="ifRoom"
        android:title="@string/share"/>
</menu>
