<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
      android:key="Account"
      android:title="Account">
    <EditTextPreference
        android:defaultValue="10"
        android:dialogTitle="@string/settings_distance"
        android:key="mc.distance.show"
        android:summary="@string/activity_auth_login"
        android:title="@string/activity_auth_login"
        android:inputType="number"
        android:tag="mc.distance.show" />
    <EditTextPreference
        android:defaultValue="10"
        android:dialogTitle="@string/settings_distance_alarm"
        android:key="mc.distance.alarm"
        android:summary="@string/activity_auth_password"
        android:title="@string/activity_auth_password"
        android:id="@+id/auth_password"
        android:tag="mc.distance.alarm" />
  </PreferenceCategory>
</PreferenceScreen>