<LinearLayout
    style="@style/activity_about"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="motocitizen.ui.activity.AboutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_info"/>

    <TextView
        android:id="@+id/about_code_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_version_text"/>

    <TextView
        android:id="@+id/about_url_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_url_support"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_authors"/>

    <Button
        android:id="@+id/businessCardButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/indent_row_margin"
        android:text="@string/business_card"/>

    <WebView
        android:id="@+id/change_log"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
