<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:yourapp="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_refresh"
        yourapp:showAsAction="ifRoom"
        android:title="Refresh"
        android:visible="false"
        android:icon="@android:drawable/ic_menu_rotate" />
    <item
        android:id="@+id/do_not_distrub"
        yourapp:showAsAction="ifRoom"
        android:icon="@drawable/ic_lock_ringer_on_alpha"
        android:title="@string/do_not_distrub"/>
    <item
        android:id="@+id/small_menu_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/small_menu_refresh"/>
    <item
        android:id="@+id/small_menu_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/small_menu_settings"/>
    <item
        android:id="@+id/small_menu_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/small_menu_about"/>
    <item
        android:id="@+id/small_menu_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/small_menu_exit"/>

</menu>
