<LinearLayout android:id="@+id/main_frame_applications"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <!--
        <LinearLayout
            android:id="@+id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/status_gradient"
            android:orientation="horizontal"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp" >

            <TextView
                android:id="@+id/statusBarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="0.64"
                android:ems="10"
                android:freezesText="true"
                android:gravity="center_vertical"
                android:inputType="none"
                android:lines="2"
                android:maxLines="2"
                android:minLines="2"
                android:textColor="#fff" />

            <ImageButton
                android:id="@+id/statusBarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/statusBarButton"
                android:cropToPadding="false"
                android:gravity="end"
                android:minHeight="1dp"
                android:minWidth="1dp"
                android:src="@drawable/gear" />
        </LinearLayout>
    -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f000">
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:indeterminate="true"/>

    <FrameLayout
        android:id="@+id/tab_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <include
            layout="@layout/acc_list"/>

        <LinearLayout
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/footer_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:background="@drawable/bottom_area"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/dial_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:background="@null"
                android:contentDescription="@string/dial_button"
                android:src="@drawable/dial"/>

            <ImageButton
                android:id="@+id/add_point_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:background="@null"
                android:contentDescription="@string/activity_main_add_point_button"
                android:src="@drawable/create"/>

            <RadioGroup
                android:id="@+id/main_tabs_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:gravity="top"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/tab_accidents_button"
                    style="@style/statusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tab"
                    android:button="@color/statusBarTextColor"
                    android:checked="true"
                    android:text="@string/tab_accidents">
                </RadioButton>
                <RadioButton
                    android:id="@+id/tab_map_button"
                    style="@style/statusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tab"
                    android:button="@color/statusBarTextColor"
                    android:checked="false"
                    android:layout_marginLeft="2dp"
                    android:text="@string/tab_map">
                </RadioButton>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/footer_menu_anchor"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>
</LinearLayout>