<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:id="@+id/activity_accident_details"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:context="motocitizen.Activity.AccidentDetailsActivity">

    <LinearLayout
            android:id="@+id/acc_details_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:shrinkColumns="1"
            android:stretchColumns="1,2">
            <TextView
                    android:id="@+id/acc_details_general_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#f0f0f0"
                    android:textColor="#ff000000"/>
            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#e0e0e0">

                <TextView
                        android:id="@+id/acc_details_general_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#0000A0"/>

                <TextView
                        android:id="@+id/acc_details_general_owner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_toLeftOf="@+id/acc_details_general_status"
                        android:layout_toRightOf="@+id/acc_details_general_time"
                        android:ellipsize="end"
                        android:lines="1"
                        android:scrollHorizontally="true"
                        android:text=""
                        android:textColor="#000000"/>

                <TextView
                        android:id="@+id/acc_details_general_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text=""
                        android:textColor="#000000"/>
            </RelativeLayout>
            <TextView
                    android:id="@+id/acc_details_general_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text=""
                    android:background="#f0f0f0"
                    android:textColor="#ff000000"/>
            <TextView
                    android:id="@+id/acc_details_general_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#e0e0e0"
                    android:textColor="#ff000000"/>
    </LinearLayout>

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

    <HorizontalScrollView
            android:id="@+id/accident_list_scroll_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginBottom="5dp"
            android:scrollbars="none">

        <RadioGroup
                android:id="@+id/details_tabs_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="top"
                android:orientation="horizontal">

            <RadioButton
                    android:id="@+id/details_tab_people"
                    style="@style/statusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tab"
                    android:button="@color/statusBarTextColor"
                    android:checked="true"
                    android:tag="details_people_content"
                    android:text="@string/tab_onway"/>

            <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="#00000000"/>

            <RadioButton
                    android:id="@+id/details_tab_messages"
                    style="@style/statusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tab"
                    android:button="@color/statusBarTextColor"
                    android:checked="false"
                    android:tag="details_messages_content"
                    android:text="@string/tab_messages"/>

            <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="#00000000"/>

            <RadioButton
                    android:id="@+id/details_tab_history"
                    style="@style/statusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tab"
                    android:button="@color/statusBarTextColor"
                    android:checked="false"
                    android:tag="details_log_content"
                    android:text="@string/tab_log"/>
        </RadioGroup>
    </HorizontalScrollView>

    <FrameLayout
            android:id="@+id/details_tab_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    </FrameLayout>
</LinearLayout>
